 * $Id: ChangeLog,v 1.4099 2005/05/04 16:47:28 bdj Exp $

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-05-04 15:05 UTC-0400 Gerald Drouillard <gerald@drouillard.ca>
  * xharbour/source/rtl/teditor.prg
    ! fix text2array() support for trailing spaces or linew with many spaces.
    ! fix getparapraph() does not need to add a space to the line.  On lines with no spaces this would cause "corruption" of the text.

2005-05-04 23:45 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  * contrib/gtwvw/hbgtwvw.h
  * contrib/gtwvw/gtwvw.c
  * contrib/gtwvw/doc/whatsnew.txt
    + hb_wvw_gtSetLastMenuEvent()
    + WVW_SETLASTMENUEVENT() callable from .prg

2005-05-04 13:00 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/dbinfo.ch
    + added DBOI_SCOPESET, DBOI_SCOPECLEAR
  * xharbour/include/hbapirdd.h
    * some comments added about using Clipper's concept of RecID
      which could be nonnumerical value in some RDDs

  * xharbour/include/hbvm.h
    * minor modification: long replaced by LONG

  * xharbour/source/rdd/dbcmd.c
    ! clear unused fields in DBEVALINFO
    ! respect non numeric RecID in RLOCK()
    ! respect non numeric RecID in __DBARRANGE()
    + added 2 as parameter in ordScope() - it sets both scope
      the return value depends on RDD - ordScope() itself does not
      try to force it now

  * xharbour/source/rdd/workarea.c
    * use SELF_EVALBLOCK() method to evaluate relation block
    ! use SELF_GOTO() method instead of SELF_GOTOID() - it fixes bad
      .prg code which sets bad relations without active indexes but
      it breaks using non numeric RecIDs. I will have to make some
      test in Clipper to found its exact behavior then discuss this
      problem in devel list

  * xharbour/source/rdd/dbfcdx/dbfcdx1.c